[package]
name = "ball_tiles"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1" }
bevy_framepace = "0.18.0"
bevy_rapier2d = "0.28.0"
rand = "0.8.5"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
